--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 /node_modules
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
+build
+dist
+
+# misc
+.DS_Store
+.env
+npm-debug.log
+yarn-error.log
+.truffle-solidity-loader
